// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URL > crossSerialize > scoped > supports URL 1`] = `"($R=>$R[0]=new URL("https://github.com/lxsmnsyc/seroval?hello=world"))($R["example"])"`;

exports[`URL > crossSerialize > supports URL 1`] = `"$R[0]=new URL("https://github.com/lxsmnsyc/seroval?hello=world")"`;

exports[`URL > crossSerializeAsync > scoped > supports URL 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=new URL("https://github.com/lxsmnsyc/seroval?hello=world")))($R["example"])"`;

exports[`URL > crossSerializeAsync > supports URL 1`] = `"$R[0]=Promise.resolve($R[1]=new URL("https://github.com/lxsmnsyc/seroval?hello=world"))"`;

exports[`URL > crossSerializeStream > scoped > supports URL 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`URL > crossSerializeStream > scoped > supports URL 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new URL("https://github.com/lxsmnsyc/seroval?hello=world")))($R["example"])"
`;

exports[`URL > crossSerializeStream > supports URL 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`URL > crossSerializeStream > supports URL 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new URL("https://github.com/lxsmnsyc/seroval?hello=world"))"
`;

exports[`URL > serialize > supports URL 1`] = `"new URL("https://github.com/lxsmnsyc/seroval?hello=world")"`;

exports[`URL > serializeAsync > supports URL 1`] = `"Promise.resolve(new URL("https://github.com/lxsmnsyc/seroval?hello=world"))"`;

exports[`URL > toCrossJSONStream > supports URL 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`URL > toCrossJSONStream > supports URL 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":25,"i":3,"s":{"t":1,"s":"https://github.com/lxsmnsyc/seroval?hello=world"},"c":"seroval-plugins/web/URL"}]}"`;

exports[`URL > toJSON > supports URL 1`] = `"{"t":{"t":25,"i":0,"s":{"t":1,"s":"https://github.com/lxsmnsyc/seroval?hello=world"},"c":"seroval-plugins/web/URL"},"f":31,"m":[]}"`;

exports[`URL > toJSON > supports URL 2`] = `"{"t":25,"i":0,"s":{"t":1,"s":"https://github.com/lxsmnsyc/seroval?hello=world"},"c":"seroval-plugins/web/URL"}"`;

exports[`URL > toJSONAsync > supports URL 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"t":1,"s":"https://github.com/lxsmnsyc/seroval?hello=world"},"c":"seroval-plugins/web/URL"}},"f":31,"m":[]}"`;

exports[`URL > toJSONAsync > supports URL 2`] = `"{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"t":1,"s":"https://github.com/lxsmnsyc/seroval?hello=world"},"c":"seroval-plugins/web/URL"}}"`;
